src/index.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  font-family: "Fira Sans", sans-serif;
}

.log {
  @apply drop-shadow-lg border-8 bg-stone-900
    flex flex-col justify-between p-7
      min-w-1/3 min-h-1/2 h-min pointer-events-auto;

  background-image: url('/scanlines.png');
  width: 80%;
}

.log-close {
  cursor: pointer;
}

.log-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1001;
  display: flex;
  justify-content: center;
  align-items: center;
}

.leaflet-popup-content-wrapper {
  @apply bg-sidebar border-solid border-[1px];

  border-radius: 0px;
  min-width: 300px;
}

.leaflet-popup-tip {
  @apply bg-sidebar border-solid border-[1px];
}

.bg-sidebar {
  @apply bg-beigelight text-black;
}

.bg-sidebar.sr1{
  @apply bg-sr1color text-black;
}

.dark .bg-sidebar {
  @apply bg-gradient-to-br from-blue-950 to-indigo-950 text-white;
}

.bg-btn {
  @apply bg-beigedark;
}

.bg-btn.disabled {
  @apply bg-gray-500;
}

.dark .bg-btn {
  @apply bg-blue-900;
}

.bg-btn.btn-red {
  @apply bg-red;
}

hr {
  border-color: currentColor;
  @apply text-black border-t ;
}

.dark hr {
  border-color: currentColor;
  @apply text-white;
}

.tooltip .tooltiptext {
    visibility: hidden;
    width: 120px;
    background-color: black;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px;
    position: absolute;
    z-index: 1;
  }
  
  .tooltip:hover .tooltiptext {
    visibility: visible;
  }

